<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_event_detail">

    <FrameLayout
        android:id="@+id/hide_btn_container"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@drawable/background_btn_close" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Игаем в футбол"
                android:textColor="@color/title"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Игаем в футбол" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chat"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_event_card_item"
                app:layout_constraintEnd_toStartOf="@id/persons"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_chat"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_chat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_telegram" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/chat"
                    android:textColor="@color/sub_title"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/ic_chat"
                    app:layout_constraintStart_toStartOf="@id/ic_chat"
                    app:layout_constraintTop_toBottomOf="@id/ic_chat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/persons"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:background="@drawable/background_event_card_item"
                app:layout_constraintEnd_toStartOf="@id/date"
                app:layout_constraintStart_toEndOf="@id/chat"
                app:layout_constraintTop_toTopOf="@id/chat">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_persons"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:tint="@color/title"
                    app:layout_constraintBottom_toTopOf="@id/tv_persons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_person" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_persons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="12/22"
                    android:textColor="@color/sub_title"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/ic_persons"
                    app:layout_constraintStart_toStartOf="@id/ic_persons"
                    app:layout_constraintTop_toBottomOf="@id/ic_persons" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:background="@drawable/background_event_card_item"
                app:layout_constraintEnd_toStartOf="@id/share"
                app:layout_constraintStart_toEndOf="@id/persons"
                app:layout_constraintTop_toTopOf="@id/chat">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:tint="@color/title"
                    app:layout_constraintBottom_toTopOf="@id/tv_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_calendar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="12.02 22:00"
                    android:textColor="@color/sub_title"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/ic_date"
                    app:layout_constraintStart_toStartOf="@id/ic_date"
                    app:layout_constraintTop_toBottomOf="@id/ic_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_event_card_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/date"
                app:layout_constraintTop_toTopOf="@id/chat">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_share"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_share" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Рассказать"
                    android:textColor="@color/sub_title"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/ic_share"
                    app:layout_constraintStart_toStartOf="@id/ic_share"
                    app:layout_constraintTop_toBottomOf="@id/ic_share" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/description_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_event_card_item"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chat">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/description"
                    android:textColor="@color/title"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/mock_text_description"
                    android:textColor="@color/sub_title"
                    android:textSize="14sp"
                    tools:text="@string/mock_text_description" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/bottom_background"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@drawable/background_bottom_sheet_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_take_part"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/backgrond_action_btn"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/take_part"
        android:textColor="@color/title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>